# clipcli

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/clipcli/: __init__.py  assets.py  audio.py  autocrop.py  captions.py  cli.py  document.py  fallback.py  ffmpeg.py  gemini.py  gemma.py  models.py  pipeline.py  promo.py  seedance.py  sound.py  transcribe.py  tts.py
tests/: test_assets.py  test_audio.py  test_autocrop.py  test_captions.py  test_cli_env.py  test_document.py  test_fallback.py  test_ffmpeg.py  test_gemini.py  test_gemma.py  test_models.py  test_pipeline_broll.py  test_pipeline_sound.py  test_promo.py  test_seedance.py  test_sound.py  test_transcribe.py  test_tts.py
