[project]
name = "clipcli"
version = "0.1.0"
description = "Local-first AI video clipping pipeline using ffmpeg, WhisperX, Gemini, Freesound, and SeedDance."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "xjodoin" },
]
keywords = ["video", "clips", "shorts", "ffmpeg", "whisperx", "gemini", "seedance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Utilities",
]
dependencies = [
  "google-genai>=1.0.0",
  "httpx>=0.27.0",
  "opencv-python>=4.9.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
transcribe = [
  "whisperx>=3.3.0",
]
audio = [
  "deepfilternet>=0.5.6",
  "soundfile>=0.13.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
clipcli = "clipcli.cli:app"

[project.urls]
Homepage = "https://github.com/xjodoin/clipcli"
Repository = "https://github.com/xjodoin/clipcli"
Issues = "https://github.com/xjodoin/clipcli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
